# WM_Atlas

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: bump.yml  deploy.yml  integrate.yml
clustering/: __main__.py  clustering_boostrap.py  clustering_individual.py  clustering_population.py  compute.py  config.yml  convert2mni.py  extract_eigen.py  heatmap_cluster.py  plot.py  similarity_boostrap.py  spectral_clustering.py  utils.py  utils_nifti.py
matlab/: hb_nii_displace.m  hb_reslice_vol.m
matlab/spm_modified/: spm_reslice_hb.m  spm_run_coreg_hb.m
scripts/: clustering_boostrap.sh  clustering_k_analysis.sh  clustering_population.sh  compute_eigen.sh
tests/: test_compute.py  test_utils.py
